crates/mun_language_server/src/completion/snapshots/mun_language_server__completion__dot__tests__incomplete_struct.snap
---
source: crates/mun_language_server/src/completion/dot.rs
expression: "completion_string(r#\"\n        struct Foo { bar: i32 }\n        \n        fn foo() {\n            let bar = Foo;\n            bar.$0\n        }\n        \"#,\n                  Some(CompletionKind::Reference))"
---
fd bar i32
