crates/mun_language_server/src/completion/snapshots/mun_language_server__completion__dot__tests__nested_struct.snap
---
source: crates/mun_language_server/src/completion/dot.rs
assertion_line: 65
expression: "completion_string(r#\"\n        struct Foo { baz: i32 }\n        struct Bar(Foo)\n        \n        fn foo() {\n            let bar = Bar(Foo{baz:0});\n            bar.0.$0\n        }\n        \"#,\n                  Some(CompletionKind::Reference))"

---
fd baz i32
