crates/mun_language_server/src/completion/snapshots/mun_language_server__completion__dot__tests__param.snap
---
source: crates/mun_language_server/src/completion/dot.rs
expression: "completion_string(r#\"\n        struct Foo { bar: i32 }\n\n        fn foo(bar: Foo) {\n            bar.$0\n        }\n        \"#,\nSome(CompletionKind::Reference))"
---
fd bar i32
