crates/mun_language_server/src/completion/snapshots/mun_language_server__completion__dot__tests__self.snap
---
source: crates/mun_language_server/src/completion/dot.rs
expression: "completion_string(r#\"\n        struct Foo { bar: i32 }\n\n        impl Foo {\n            fn foo(self) {\n                self.$0\n            }\n        }\n        \"#,\nSome(CompletionKind::Reference))"
---
fd bar i32
